--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h3>My CV</h3>
                 <p>
                     Site com currículo online desenvolvido com HTML e CSS através do curso StepOne. Confira o código
-                    fonte <a href="">aqui</a>
+                    fonte <a href="https://github.com/CaioRD/my-CV">aqui</a>
                 </p>
             </section>
        <p class="last-date">Última atualização 26/12/2022</p>
