--- a/My CV/index.html
+++ b/My CV/index.html
@@ -77,6 +77,12 @@
                             <div></div>
                         </div>
                     </li>
+                    <li>
+                        <p>Libras</p>
+                        <div class="progress libras">
+                            <div></div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -110,7 +116,7 @@
                     fonte <a href="https://github.com/CaioRD/my-CV">aqui</a>
                 </p>
             </section>
-       <p class="last-date">Última atualização 26/12/2022</p>
+       <footer class="last-date">Última atualização 19/04/2023</footer>
         </div>
     </div>
 </body>
