Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <h3>Educação</h3>
                 <ul>
                     <li>
-                        <p>2018-2024</p>
-                        <h4>Arquitetura e Urbanismo</h4>
-                        <h5>Centro Universitário Brasileiro - UNIBRA</h5>
+                        <p>2023-2025</p>
+                        <h4>Sistemas para internet</h4>
+                        <h5>Universidade Católica de Pernambuco - UNICAP</h5>
                     </li>
                 </ul>
             </div>
@@ -110,7 +110,7 @@
                     fonte <a href="https://github.com/CaioRD/my-CV">aqui</a>
                 </p>
             </section>
-       <p class="last-date">Última atualização 26/12/2022</p>
+       <p class="last-date">Última atualização 20/06/2023</p>
         </div>
     </div>
 </body>
