--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li>
                         <p>2023-2025</p>
                         <h4>Sistemas para internet</h4>
-                        <h5>Universidade Católica de Pernambuco - UNICAP</h5>
+                        <h5>Universidade católica de pernambuco - UNICAP</h5> 
                     </li>
                 </ul>
             </div>
@@ -74,6 +74,12 @@
                     <li>
                         <p>Espanhol</p>
                         <div class="progress espanhol">
+                            <div></div>
+                        </div>
+                    </li>
+                    <li>
+                        <p>Libras</p>
+                        <div class="progress libras">
                             <div></div>
                         </div>
                     </li>
@@ -110,7 +116,7 @@
                     fonte <a href="https://github.com/CaioRD/my-CV">aqui</a>
                 </p>
             </section>
-       <p class="last-date">Última atualização 20/06/2023</p>
+       <footer class="last-date">Última atualização 19/04/2023</footer>
         </div>
     </div>
 </body>
