--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         <div class="infomrmation-column">
             <img src="images/Avatar.png"
                 alt="imagem 3x4 de Caio Dutra, homem com cabelo e olhos castanhos e camisa polo">
+            <img src="images/Avatar.png"
+                alt="imagem 3x4 de Caio Dutra, homem com cabelo e olhos castanhos e camisa polo">
+            <img src="images/Avatar.png"
+                alt="imagem 3x4 de Caio Dutra, homem com cabelo e olhos castanhos e camisa polo">
+            <img src="images/Avatar.png"
+                alt="imagem 3x4 de Caio Dutra, homem com cabelo e olhos castanhos e camisa polo">
+            <img src="images/Avatar.png"
+                alt="imagem 3x4 de Caio Dutra, homem com cabelo e olhos castanhos e camisa polo">
+            <img src="images/Avatar.png"
+                alt="imagem 3x4 de Caio Dutra, homem com cabelo e olhos castanhos e camisa polo">
             <h1>Caio Dutra</h1>
             <h2>Desenvolvedor FrontEnd</h2>
             <div class="contact-description">
